# pydemumble

./: .gitmodules  CMakeLists.txt  pyproject.toml
.github/workflows/: wheels.yml
scripts/: copy-llvm-demangle.sh  copy-swift-demangle.sh
src/: pydemumble.cpp
src/rust_legacy/: rust_legacy_demangle.cc  rust_legacy_demangle.h
tests/: test_demangle_cases.py
